--- a/index.html
+++ b/index.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="A listing of library data from the IFLA Library Map of the World">
-    <meta name="author" content="Libraries Hacked">
-    <title>IFLA #librarydata</title>
-    <link href="node_modules/tether/dist/css/tether.min.css" rel="stylesheet" />
-    <link href="node_modules/bootswatch/materia/bootstrap.min.css" rel="stylesheet" />
-    <link href="node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="css/site.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>IFLA World Library Data</title>
+  <link rel="stylesheet" href="css/site.css">
+  <link rel="stylesheet" href="node_modules/bulma/css/bulma.min.css">
+  <link rel="stylesheet" href="node_modules/datatables-bulma/css/dataTables.bulma.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+    crossorigin="anonymous">
 </head>
 
 <body>
-    <div id="main" class="container main">
-
-        <footer>
-            <hr />
-            <p>a <a href="https://www.librarieshacked.org" target="_blank">Libraries Hacked</a> open source
-                project available on <a href="https://github.com/librarieshacked/ifla-librarydata" target="_blank">GitHub</a>.</p>
-        </footer>
+  <section class="section">
+    <div class="container">
+      <h1 class="title">IFLA World Library Data</h1>
+      <p class="subtitle">All data compiled and licensed by IFLA. Licensed under the Creative Commons
+        Attribution 4.0 International (CC BY 4.0).</p>
+      <a class="button is-large is-success">
+        <span class="icon is-medium">
+          <i class="fas fa-file-csv"></i>
+        </span>
+        <span>Download data</span>
+      </a>
     </div>
-    <!-- Framework plugins -->
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/tether/dist/js/tether.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- Data and charting plugins -->
-    <script src="node_modules/moment/min/moment.min.js"></script>
-    <script src="node_modules/chart.js/dist/Chart.min.js"></script>
-    <!-- Mapping plugins -->
-    <script src="node_modules/leaflet/dist/leaflet.js"></script>
-    <!-- Custom -->
-    <script src="js/twitter.js"></script>
-    <script src="js/site.js"></script>
+    <div class="container">
+      <hr />
+      <table cellpadding="0" cellspacing="0" border="0" id="tbllibrarydata" class="librarytable table is-bordered is-striped is-narrow is-fullwidth"></table>
+    </div>
+  </section>
+  <footer>
+    <div class="container">
+      <hr />
+      <p>A Libraries Hacked #librarydata project. All code available on GitHub.</p>
+      <br />
+    </div>
+  </footer>
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="node_modules/papaparse/papaparse.min.js"></script>
+  <script src="node_modules/datatables.net/js/jquery.dataTables.min.js"></script>
+  <script src="node_modules/datatables-bulma/js/dataTables.bulma.min.js"></script>
+  <script src="js/site.js"></script>
 </body>
 
 </html>
