--- a/index.html
+++ b/index.html
@@ -2,46 +2,56 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>IFLA World Library Data</title>
-  <link rel="stylesheet" href="css/site.css">
-  <link rel="stylesheet" href="node_modules/bulma/css/bulma.min.css">
-  <link rel="stylesheet" href="node_modules/datatables-bulma/css/dataTables.bulma.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-    crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>IFLA World Library Data</title>
+    <link rel="stylesheet" href="css/site.css">
+    <link rel="stylesheet" href="node_modules/bulma/css/bulma.min.css">
+    <link rel="stylesheet" href="node_modules/datatables-bulma/css/dataTables.bulma.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+        crossorigin="anonymous">
 </head>
 
 <body>
-  <section class="section">
-    <div class="container">
-      <h1 class="title">IFLA World Library Data</h1>
-      <p class="subtitle">All data compiled and licensed by IFLA. Licensed under the Creative Commons
-        Attribution 4.0 International (CC BY 4.0).</p>
-      <a class="button is-large is-success">
-        <span class="icon is-medium">
-          <i class="fas fa-file-csv"></i>
-        </span>
-        <span>Download data</span>
-      </a>
-    </div>
-    <div class="container">
-      <hr />
-      <table cellpadding="0" cellspacing="0" border="0" id="tbllibrarydata" class="librarytable table is-bordered is-striped is-narrow is-fullwidth"></table>
-    </div>
-  </section>
-  <footer>
-    <div class="container">
-      <hr />
-      <p>A Libraries Hacked #librarydata project. All code available on GitHub.</p>
-      <br />
-    </div>
-  </footer>
-  <script src="node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="node_modules/papaparse/papaparse.min.js"></script>
-  <script src="node_modules/datatables.net/js/jquery.dataTables.min.js"></script>
-  <script src="node_modules/datatables-bulma/js/dataTables.bulma.min.js"></script>
-  <script src="js/site.js"></script>
+    <section class="section">
+        <div class="container">
+            <h1 class="title">IFLA World Library Data</h1>
+            <p class="subtitle">All data <a href="https://librarymap.ifla.org/copyright" target="_blank">compiled and licensed by IFLA</a>.</p>
+            <a class="button is-large is-success">
+                <span class="icon is-medium">
+                    <i class="fas fa-file-csv"></i>
+                </span>
+                <span><strong>Download</strong> data</span>
+            </a>
+        </div>
+        <div class="container">
+            <br />
+            <div class="tabs is-small">
+                <ul>
+                    <li><a>National</a></li>
+                    <li><a>Public</a></li>
+                    <li><a>Academic</a></li>
+                    <li><a>School</a></li>
+                    <li><a>Volunteer</a></li>
+                    <li><a>Other</a></li>
+                </ul>
+            </div>
+            <br />
+            <table cellpadding="0" cellspacing="0" border="0" id="tbllibrarydata" class="librarytable table is-bordered is-striped is-narrow is-fullwidth"></table>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <hr />
+            <p>A Libraries Hacked #librarydata project. All code available on GitHub.</p>
+            <br />
+        </div>
+    </footer>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/papaparse/papaparse.min.js"></script>
+    <script src="node_modules/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="node_modules/datatables-bulma/js/dataTables.bulma.min.js"></script>
+    <script src="js/site.js"></script>
 </body>
 
 </html>
