--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <hr />
         </div>
         <div class="container">
-            <div class="tabs is-fullwidth">
+            <div class="tabs is-fullwidth is-toggle">
                 <ul id="ul-libtypes"></ul>
             </div>
             <div id="div-tabcontents"></div>
