--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="section">
         <div class="container">
             <h1 class="title">World Library Data</h1>
-            <p class="subtitle">All data compiled and licensed by IFLA. Taken from the <a href="https://librarymap.ifla.org/" target="_blank">Library map of the world</a></p>
+            <p class="subtitle">All data compiled and licensed by IFLA under Creative Commons Attribution 4.0 International. Taken from the <a href="https://librarymap.ifla.org/" target="_blank">Library map of the world</a></p>
             <a class="button is-large" href="data/ifla_data.csv">
                 <span><strong>Download</strong> data</span>
             </a>
